[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "codeforge"
version = "0.2.0"
description = "Autonomous code repo builder — any AI provider"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Core: only anthropic is required by default.
# Install extras to unlock other providers.
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30.0"]
gemini = ["google-generativeai>=0.8.0"]
all = [
    "openai>=1.30.0",
    "google-generativeai>=0.8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
codeforge = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codeforge*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
